test/official_tests/assignment/infix_operator.lox
var a = "a";
var b = "b";
a + b = "value"; // error: {"line":3,"message":"Invalid assignment target","type":"ParseError"}
